<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/collectionPhotosViews"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            style="@style/ToolBarStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_action_bar_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/collections_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBarLayout">

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/collectionInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/CollectionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_main"
                    android:layout_marginStart="@dimen/margin_main"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="@dimen/header2_text_size"
                    tools:text="@tools:sample/full_names" />

                <TextView
                    android:id="@+id/CollectionTags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_main"
                    tools:text="@tools:sample/full_names"
                    android:textAlignment="center"
                    android:singleLine="false"
                    android:textSize="@dimen/normal_text_size" />

                <TextView
                    android:id="@+id/collectionDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_2x"
                    android:layout_marginStart="@dimen/margin_main"
                    android:textAlignment="center"
                    android:textSize="@dimen/header2_text_size"
                    tools:text="@tools:sample/full_names" />

                <TextView
                    android:id="@+id/collectionPhotosNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_main"
                    tools:text="@tools:sample/full_names"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/small_text_size" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imageList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                tools:itemCount="2"
                tools:listitem="@layout/item_photo" />

            <Button
                android:id="@+id/buttonMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_main"
                android:text="@string/more_button_text"
                android:textAllCaps="true"
                android:textSize="@dimen/header2_text_size" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/loadBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/progressBarLime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/errorString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_text_default"
        android:textSize="@dimen/header2_text_size"
        android:layout_margin="@dimen/margin_main"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_2x"
        android:text="@string/update_text"
        android:textSize="@dimen/header2_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/errorString" />

</androidx.constraintlayout.widget.ConstraintLayout>
